--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "src/app.js",
   "bin": {
-    "app-name": "src/app.js"
-  },  
+    "jarvis": "./bin/jarvis.js"
+  },
   "scripts": {
     "build": "pkg . --output src/jarvis_exec"
   },
